--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog Of The Propel 1.x Branch #
 
+## ????-??-??: Version 1.7.2 ##
+
+n/a
+
 ## 2014-02-25: Version 1.7.1 ##
 
 81a7125 Fix CS
